# qicinga2

./: README.md  pyproject.toml  setup.py
qicinga2/: __init__.py
scripts/: qicinga2
tests/: test1.py
